# api-document-generator

./: .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION-SUMMARY-T031.md  PROJECT-COMPLETION-FINAL.md  README.md  api-doc-gen.config.js  demo-t027-caching.js  demo-t028-error-handling.js  demo-t028-standalone.js  go.mod  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  test-complete-integration.js  test-express-parser.js  test-parser-service.js  tsconfig.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
demonstrations/: T029-performance-monitoring-demo.ts
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  api-diagram.uml  api.html  api.json  architecture-diagram.uml  architecture.html  architecture.json  changelog.md  developer-guide-diagram.uml  developer-guide.html  developer-guide.json  developer-guide.md  security-diagram.uml
example-express-project/src/: app.js
example-express-project/src/routes/: users.js
example-project/: CHANGELOG.md  api-doc-gen.config.js
example-project/specs/: sample-api.yaml
examples/: ai-service-example.ts
go/: main.go
html-docs/: api.html
python/: setup.py
specs/001-api-document-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-api-document-generator/agents/: ai-specialist.md  cli-specialist.md  generation-specialist.md  parser-specialist.md
specs/001-api-document-generator/contracts/: ai-service.yaml  cli-api.yaml  generation-service.yaml  parser-service.yaml
src/: server.ts
src/ai/: README.md  ai-service-factory.ts  ai-service.ts  index.ts
src/ai/providers/: http-client.ts  openai-provider.ts
src/cli/: README.md  cli-service.ts  cli.ts  index.ts
src/cli/commands/: diff.ts  generate.ts  index.ts  validate.ts
src/config/: config-manager.ts
src/core/models/: ai-summary.ts  api-spec.ts  cache.ts  configuration.ts  error-log.ts  generation-session.ts  index.ts  input-source.ts  parsed-endpoint.ts  performance-metrics.ts  schema.ts  template.ts  user-preferences.ts  validation-result.ts
src/demos/: t030-configuration-demo.ts  t030-simple-demo.ts  t031-simple-demo.ts
src/error/: error-aware-services.ts  error-handler.ts
src/gateway/: api-gateway.ts
src/generators/: generation-service.ts
src/generators/engines/: handlebars-engine.ts
src/generators/formats/: html-generator.ts  json-generator.ts  markdown-generator.ts  uml-generator.ts
src/integrations/: t030-configuration-integration.ts  t031-api-gateway-integration.ts
src/parsers/: README.md  index.ts  parser-service.ts
src/tests/: t030-configuration-tests.ts  t031-api-gateway-tests.ts
test-docs/: api.html
test-express-docs/: api.html
tests/: setup.ts
tests/contracts/: ai-service.test.ts  cli-api.test.ts  generation-service.test.ts  integration-scenarios.test.ts  parser-service.test.ts
tests/unit/: api-spec.test.ts  input-source.test.ts
tests/validation/: final-validation.test.ts  quickstart-validation.test.ts
(+8 files in other folders)
